--- a/anker/src/components/dashboard.module.css
+++ b/anker/src/components/dashboard.module.css
@@ -28,6 +28,11 @@ padding:10px 60px 30px 60px
     border:0.5px solid #F3F3F3;
     width:30%;
     padding: 25px;
+    height:0%
+}
+
+.Box p{
+margin:0
 }
 
 .Box img {
