--- a/anker/src/components/addcourse.module.css
+++ b/anker/src/components/addcourse.module.css
@@ -5,7 +5,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding:10px 20px
+    padding:10px 20px;
+  
 }
 .content{
     display: flex;
